--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,8 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: project_two_production
+  username: project_two
+  password: <%= ENV['PROJECT_TWO_DATABASE_PASSWORD'] %>
